syntax = "proto3";
package storagepb;

// Group selects one or more machines and matches them to a Profile.
message Group {
  // machine readable Id
  string id = 1;
  // human readable name
  string name = 2;
  // Profile id
  string profile = 3;
  // Selectors to match machines
  map<string, string> selector = 4;
  // JSON encoded metadata
  bytes metadata = 5;
}

// Profile defines the boot and provisioning behavior of a group of machines.
message Profile {
  // profile id
  string id = 1;
  // human readable name
  string name = 2;
  // ignition id
  string ignition_id = 3;
  // cloud config id
  string cloud_id = 4;
  // support network boot / PXE
  NetBoot boot = 5;
  // generic config id
  string generic_id = 6;
}

// NetBoot describes network or PXE boot settings for a machine.
message NetBoot {
  // the URL of the kernel image
  string kernel = 1;
  // the init RAM filesystem URLs
  repeated string initrd = 2;
  // kernel args
  repeated string args = 4;
  // (deprecated) kernel parameteres
  reserved "cmdline";
  reserved 3;
}
